--- a/style.scss
+++ b/style.scss
@@ -1,28 +1,40 @@
 // 変数宣言
-$name-view_font: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+$title_font: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 // 初期化設定
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Noto Serif JP";
+    font-family: $title_font;
 }
 
 li {
     list-style: none;
 }
 
+
+// 共通レイアウト設定
 .container {
     padding: 8% 10%;
+}
+
+.title {
+    h1 {
+        font-family: $title_font;
+        font-weight: lighter;
+        font-size: 80px;
+        color: #fff;
+    }
 }
 
 #name-view {
     width: 100%;
     height: calc(var(--vh, 1vh) * 100);
     background-color: #28003a;
-    position: absolute;
 	z-index:-1;/*描画を一番下に*/
+    background-attachment: fixed;
+    background-position: right top;
     #particles-js {
         position: relative;
         width: 100%;
@@ -34,14 +46,66 @@ li {
             h1 {
                 color: #fff;
                 font-size: 160px;
-                font-family: $name-view_font;
+                font-family: $title_font;
             }
             h2 {
                 color: #fff;
-                font-family: $name-view_font;
+                font-family: $title_font;
                 font-size: 120px;
             }
         }   
+    }
+}
+
+#about {
+    background-color: #061a26;
+    width: 100%;
+    height: 700px;
+    position: relative;
+    .triangle-left {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        height: 100%;
+        width: 50%;
+        background: linear-gradient(to right, #4b00bd 0%, #6c98ff 100%);
+        clip-path: polygon(0 0, 40% 0, 100% 100%, 0% 100%);
+    }
+    .container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        .contents {
+            margin-left: 10%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            h2 {
+                font-family: $title_font;
+                font-weight: lighter;
+                font-size: 40px;
+                color: #fff;
+                line-height: 100px;
+            }
+            h3 {
+                line-height: 60px;
+                font-size: 40px;
+                color: #fff;
+                font-weight: lighter;
+            }
+            .text {
+                margin-top: 30px;
+                width: 60%;
+                color: #fff;
+                font-size: 28px;
+                line-height: 48px;
+            }
+        }
+        
     }
 }
 
