--- a/style.scss
+++ b/style.scss
@@ -17,15 +17,19 @@ li {
 // 共通レイアウト設定
 .container {
     padding: 8% 10%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
 }
 
 .title {
-    h1 {
-        font-family: $title_font;
-        font-weight: lighter;
-        font-size: 80px;
-        color: #fff;
-    }
+    font-family: $title_font;
+    font-weight: lighter;
+    font-size: 80px;
+    color: #fff;
 }
 
 #name-view {
@@ -62,7 +66,7 @@ li {
     width: 100%;
     height: 700px;
     position: relative;
-    .triangle-left {
+    .pentagon-left {
         position: absolute;
         top: 0;
         left: 0;
@@ -73,12 +77,6 @@ li {
         clip-path: polygon(0 0, 40% 0, 100% 100%, 0% 100%);
     }
     .container {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 2;
-        width: 100%;
-        height: 100%;
         display: flex;
         justify-content: space-between;
         //このwrapperはtitleクラスとcontentsクラス2つ含んでいる。
@@ -86,7 +84,6 @@ li {
             width: 60%;
             .contents {
                 margin-left: 10%;
-                
                 h2 {
                     font-weight: lighter;
                     font-size: 40px;
@@ -104,7 +101,48 @@ li {
                     color: #fff;
                     font-size: 24px;
                     line-height: 48px;
+                    opacity: .9;
                 }
+            }
+        }
+    }
+}
+
+#statement {
+    background-color: #e3f5ff;
+    width: 100%;
+    height: 700px;
+    position: relative;
+    .pentagon-right {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+        width: 50%;
+        height: 100%;
+        background: linear-gradient(to right, #e629ff24 0%, #6fc8ff 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 65% 100%);
+    }
+    .container {
+        .title {
+            color: #061a26;
+        }
+        .wrapper {
+            margin-left: 10%;
+            .sub-title {
+                margin-top: 2%;
+                font-size: 48px;
+                font-family: $title_font;
+                line-height: 60px;
+                color: #061a26;
+                opacity: .9;
+            }
+            .text {
+                margin-top: 30px;
+                color: #061a26;
+                font-size: 24px;
+                line-height: 48px;
+                opacity: .9;
             }
         }
     }
