--- a/style.scss
+++ b/style.scss
@@ -36,11 +36,8 @@ li {
     width: 100%;
     height: calc(var(--vh, 1vh) * 100);
     background-color: #28003a;
-	z-index:-1;/*描画を一番下に*/
-    background-attachment: fixed;
-    background-position: right top;
     #particles-js {
-        position: relative;
+        position: fixed;
         width: 100%;
         height: 100%;
         .container {
