--- a/style.scss
+++ b/style.scss
@@ -127,7 +127,7 @@ li {
             color: #061a26;
         }
         .wrapper {
-            margin-left: 10%;
+            margin-left: 6%;
             .sub-title {
                 margin-top: 2%;
                 font-size: 48px;
@@ -142,6 +142,29 @@ li {
                 font-size: 24px;
                 line-height: 48px;
                 opacity: .9;
+            }
+        }
+    }
+}
+
+#skill {
+    background-color: #061a26;
+    width: 100%;
+    min-height: 700px;
+    position: relative;
+    .container {
+        .capable-lists {
+            height: 100%;
+            margin-top: 3%;
+            margin-left: 6%;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            justify-content: space-between;
+            .capable-item {
+                color: #fff;
+                font-size: 32px;
+                height: 25%;
             }
         }
     }
