--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,6 @@ li {
     list-style: none;
 }
 
-
 // 共通レイアウト設定
 .container {
     padding: 8% 10%;
@@ -176,6 +175,9 @@ li {
     height: 700px;
     position: relative;
     .container {
+        position: absolute;
+        top:0;
+        right:0;
         .title {
             color: #061a26;
         }
@@ -220,14 +222,41 @@ li {
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        .slider {
+            margin-top: 60px;
+            display: flex;
+            flex-direction: column;
+            gap: 60px;
+            li {
+                display: flex;
+                gap: 5%;
+                .texts {
+                    color: #fff;
+                    width: 54%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    h2 {
+                        font-size: 32px;
+                        font-weight: 100;
+                    }
+                    p {
+                        font-size: 18px;
+                        line-height: 60px;
+                    }
+                    
+                    
+                }
+            }
+        }
     }
 }
 
 footer {
     width: 100%;
+    height: 100px;
     display: flex;
     justify-content: center;
-    align-items: center;
     background-color: #061a26;
     position: relative;
     .copy-right {
