display none fluid profile image in under 800px

--- a/style.scss
+++ b/style.scss
@@ -308,6 +308,9 @@ footer {
                     }
                 }
             }
+            .fluid {
+                display: none;
+            }
         }
     }
     #statement {
