retry1 display none fluid profile image in under 800px

--- a/fluid.css
+++ b/fluid.css
@@ -29,3 +29,9 @@
         border-radius: 46% 54% 50% 50%/35% 61% 39% 65%;
     }
 }
+
+@media screen and (max-width: 800px) {
+    .fluid {
+        display: none;
+    }
+}
